Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11375

Client 2.10 fails to mount Server 2.11.54

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.12.0
    • Lustre 2.12.0
    • 2 MDS, 2 OSS ~2.11.54_91
      Client 2.10.4
    • 3
    • 9223372036854775807

      Mounting client fails with:

      # mount -t lustre 192.168.56.12@tcp:/zfs2 /mnt/fs2
      mount.lustre: mount 192.168.56.12@tcp:/zfs2 at /mnt/fs2 failed: Bad address
      

      MDT0 has the following error in debug log:

      00000100:02000000:1.0:1536858056.517840:0:2585:0:(import.c:1534:ptlrpc_import_recovery_state_machine()) zfs2-MDT0000: Connection restored to 880830c7-7d38-ac3b-c683-8d949f550eaa (at 192.168.56.30@tcp)
      00000100:00020000:1.0:1536858056.518193:0:2585:0:(layout.c:2067:__req_capsule_get()) @@@ Wrong buffer for field `mdt_body' (1 of 1) in format `MDS_STATFS': 0 vs. 216 (client)
        req@ffff9a06cd249b00 x1611512228611360/t0(0) o41->1953ab2d-accd-2169-bea6-82979f16a7d4@192.168.56.30@tcp:452/0 lens 224/0 e 0 to 0 dl 1536858067 ref 1 fl Interpret:/0/ffffffff rc 0/-1
      00000020:00000080:1.0:1536858056.524976:0:2585:0:(genops.c:1561:class_disconnect()) disconnect: cookie 0x3f757c9924a4d7eb
      

      Setup:
      mds03: MGT, MDT1
      mds04: MDT0
      oss03: OST0, OST2
      oss04: OST1, OST3
      This is all ZFS based (ZFS 0.7.9)

            bzzz Alex Zhuravlev
            utopiabound Nathaniel Clark
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: